--- a/shior/src/main/resources/application.properties
+++ b/shior/src/main/resources/application.properties
@@ -1,12 +1,10 @@
-spring.datasource.url = jdbc:mysql://66.66.66.66:3306/shiro?characterEncoding=utf8&allowMultiQueries=true&useSSL=false
-spring.datasource.username = root
-spring.datasource.password = 123456
-spring.datasource.driver-class-name = com.mysql.jdbc.Driver
-
-mybatis.mapperLocations = classpath:mapper/**/*.xml
-
+spring.datasource.url=jdbc:mysql://66.66.66.66:3306/shiro?characterEncoding=utf8&allowMultiQueries=true&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+mybatis.mapperLocations=classpath:mapper/**/*.xml
 #log
-logging.file.name=log/log.log
+logging.file.name=shior/log/log.log
 #logging.level.root=debug
 logging.level.com.howie.shiro.mapper=DEBUG
 logging.level.org.springframework.web=DEBUG
