--- a/jwt/pom.xml
+++ b/jwt/pom.xml
@@ -8,15 +8,13 @@
         <version>2.3.0.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.yanle</groupId>
-    <artifactId>shiro</artifactId>
+    <groupId>com.yanle.shiro</groupId>
+    <artifactId>jwt</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>shiro</name>
+    <name>jwt</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
     </properties>
 
@@ -58,6 +56,13 @@
             <artifactId>shiro-spring</artifactId>
             <version>1.4.0</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.auth0/java-jwt -->
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>3.4.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
